avoid visible text change on localising date

--- a/aliens.css
+++ b/aliens.css
@@ -93,3 +93,7 @@ a:hover {
 .alien .traits {
   display: none;
 }
+
+.alien .info {
+  opacity: 0;
+}
